tests/ui/coroutine/gen_fn.e2024.stderr
error: `gen` blocks are not yet implemented
  --> $DIR/gen_fn.rs:4:1
   |
LL | gen fn foo() {}
   | ^^^
   |
   = help: only the keyword is reserved for now

error: aborting due to previous error

